add new management solution as gitolite. update all compose files.

--- a/compose/master_service/docker-compose.yml
+++ b/compose/master_service/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - ../../config/web-server/nginx/php/fastcgi/fastcgi_params:/etc/nginx/fastcgi_params
       - ../../nginx_cache/:/etc/nginx/cache/
       - ../../ssl/letsencrypt/:/etc/letsencrypt/
-      - ../../ssl/ssl/:/etc/ssl/      
+      - ../../ssl/ssl/:/etc/ssl/
+      - ../../ssl/nginx/:/etc/nginx/ssl/
       - ../../log/nginx/:/log/nginx/
     ports:
       - "80:80"
@@ -21,10 +22,13 @@ services:
       TZ: "Asia/Seoul"
     restart: always    
     depends_on:
-      - app
+      - php-app
       - openproject
+      - jenkins
+      #- gunicorn-app
+      #- uwsgi-app
 
-  app:
+  php-app:
     build: ../../docker/php-fpm/
     working_dir: /application
     container_name: php-fpm7.3      
@@ -35,19 +39,33 @@ services:
     environment:
       TZ: "Asia/Seoul"
     restart: always
-    
-  gunicorn-app:
-    build: ../../../docker/gunicorn/
-    working_dir: /application
-    container_name: gunicorn-app
-    privileged: true
-    volumes:
-        - ../../../www:/www
-        - ../../../log:/log        
-        - /sys/fs/cgroup:/sys/fs/cgroup:ro    
-    environment:
-      TZ: "Asia/Seoul"
-    restart: always    
+
+  # gunicorn-app:
+  #   build: ../../docker/gunicorn/
+  #   working_dir: /application
+  #   container_name: gunicorn-app    
+  #   volumes:
+  #       - ../../www:/www
+  #       - ../../log:/log
+  #   environment:
+  #       TZ: "Asia/Seoul"  
+  #   command:
+  #       - /tmp/run.sh    
+  #   restart: always
+
+  # uwsgi-app:
+  #   build: ../../docker/uwsgi/
+  #   working_dir: /application
+  #   container_name: uwsgi-app
+  #   volumes:
+  #       - ../../www:/www
+  #       - ../../config/app-server/uwsgi/uwsgi.ini:/application/uwsgi.ini
+  #       - ../../log:/log
+  #   command:
+  #       - /tmp/run.sh
+  #   environment:
+  #       TZ: "Asia/Seoul"
+  #   restart: always   
 
   openproject:
     image: openproject/community:latest
@@ -78,4 +96,16 @@ services:
       - ./jenkins_home:/var/jenkins_home
     environment:
       TZ: "Asia/Seoul"
+    restart: always
+
+  gitolite:
+    build: ../../docker/gitolite
+    working_dir: /application
+    container_name: gitolite
+    volumes:
+      - ./storage:/home/gitolite-creator/repositories        
+    ports:        
+      - "2222:22"
+    environment:
+      TZ: "Asia/Seoul"    
     restart: always
