cronrab's '.well-known' folder location insert command added in nginx script files.

--- a/config/web-server/nginx/gunicorn/sample_nginx_proxy.conf
+++ b/config/web-server/nginx/gunicorn/sample_nginx_proxy.conf
@@ -20,6 +20,12 @@ server {
     # mind), you can define a unix:.sock location here as well
     ###
 
+    # Allow Lets Encrypt Domain Validation Program
+    location ^~ /.well-known/acme-challenge/ {
+        allow all;
+        root crontab_folder;
+    }
+
     # Block dot file (.htaccess .htpasswd .svn .git .env and so on.)
     location ~ /\. {
         deny all;
