--- a/compose/master_service/docker-compose-uwsgi.yml
+++ b/compose/master_service/docker-compose-uwsgi.yml
@@ -1,50 +1,55 @@
 version: "3.9"
 services:
   webserver:
-    build: ../../../docker/nginx/
+    build: ../../docker/nginx/
     logging:
       driver: "${LOG_DRIVER}"
       options:
         max-file: "${LOG_OPT_MAXF}"
         max-size: "${LOG_OPT_MAXS}"
-    working_dir: /application
-    container_name: nginx-gunicorn-webserver
+    container_name: nginx-webserver
     volumes:
-      - ../../../www:/www
-      - ../../../script/:/script/
-      - ../../../config/web-server/nginx/gunicorn/conf.d/:/etc/nginx/conf.d/
-      - ../../../config/web-server/nginx/gunicorn/nginx_conf/nginx.conf:/etc/nginx/nginx.conf
-      - ../../../config/web-server/nginx/gunicorn/proxy_params/proxy_params:/etc/nginx/proxy_params
+      - ../../www:/www
+      - ../../script/:/script/
+      - ../../bin/certbot-auto:/usr/local/bin/certbot-auto
+      - ../../config/web-server/nginx/uwsgi/conf.d/:/etc/nginx/conf.d/
+      - ../../config/web-server/nginx/uwsgi/nginx_conf/nginx.conf:/etc/nginx/nginx.conf
+      - ../../config/web-server/nginx/uwsgi/proxy_params/proxy_params:/etc/nginx/proxy_params
+      - ../../config/web-server/nginx/uwsgi/uwsgi_params/uwsgi_params:/etc/nginx/uwsgi_params
       - ./ssl/certs/:/etc/ssl/certs/
       - ./ssl/letsencrypt/:/etc/letsencrypt/
-      - ../../../log:/log
+      - ../../log/nginx/:/log/nginx/
     ports:
       - 80:80
       - 443:443
     environment:
       TZ: "Asia/Seoul"
     restart: always
+    depends_on:
+      - openproject
+      - jenkins
+      - uwsgi-app
 
-  gunicorn-app:
-    build: ../../../docker/gunicorn/
+  uwsgi-app:
+    build: ../../docker/uwsgi/
     logging:
       driver: "${LOG_DRIVER}"
       options:
         max-file: "${LOG_OPT_MAXF}"
         max-size: "${LOG_OPT_MAXS}"
-    working_dir: /www/${PROJECT_DIR}
-    container_name: gunicorn-app
+    working_dir: /application
+    container_name: uwsgi-app
     volumes:
-      - ../../../www:/www
-      - ../../../log:/log
-      - ../../../config/app-server/gunicorn/:/gunicorn
-    command: bash -c "poetry config virtualenvs.create false && poetry install --no-root && gunicorn -c /gunicorn/gunicorn_config.py"
+      - ../../www:/www
+      - ../../config/app-server/uwsgi/uwsgi.ini:/application/uwsgi.ini
+      - ../../log:/log
+    command: bash -c "poetry config virtualenvs.create false && poetry install --no-root --without test && uwsgi --ini /application/uwsgi.ini"
     environment:
       TZ: "Asia/Seoul"
     restart: always
 
   celery:
-    build: ../../../docker/gunicorn/
+    build: ../../../docker/uwsgi/
     logging:
       driver: "${LOG_DRIVER}"
       options:
@@ -59,18 +64,18 @@ services:
       poetry install --no-root && \
       celery -A config worker \
       --loglevel=INFO \
-      --logfile=/log/gunicorn/celery/worker-%n%I.log "
+      --logfile=/log/uwsgi/celery/worker-%n%I.log "
     environment:
       TZ: "Asia/Seoul"
     restart: always
     depends_on:
       - redis
-      - gunicorn-app
+      - uwsgi-app
     profiles:
       - celery
 
   celery-beat:
-    build: ../../../docker/gunicorn/
+    build: ../../../docker/uwsgi/
     logging:
       driver: "${LOG_DRIVER}"
       options:
@@ -86,7 +91,7 @@ services:
       celery -A config beat \
       --loglevel=INFO \
       --scheduler django_celery_beat.schedulers:DatabaseScheduler \
-      --logfile=/log/gunicorn/celerybeat/celerybeat.log "
+      --logfile=/log/uwsgi/celerybeat/celerybeat.log "
     environment:
       TZ: "Asia/Seoul"
     restart: always
@@ -152,3 +157,65 @@ services:
     restart: always
     profiles:
       - redis
+
+  openproject:
+    image: openproject/community:11
+    logging:
+      driver: "${LOG_DRIVER}"
+      options:
+        max-file: "${LOG_OPT_MAXF}"
+        max-size: "${LOG_OPT_MAXS}"
+    container_name: openproject
+    privileged: true
+    volumes:
+      - ./pgdata/:/var/openproject/pgdata/
+      - ../../log/supervisor/:/var/log/supervisor/
+      - ./static/:/var/openproject/assets/
+    expose:
+      - 8080
+    environment:
+      EMAIL_DELIVERY_METHOD: ${EMAIL_DELIVERY_METHOD}
+      SMTP_ADDRESS: ${SMTP_ADDRESS}
+      SMTP_PORT: ${SMTP_PORT}
+      SMTP_DOMAIN: "${SMTP_DOMAIN}"
+      SMTP_AUTHENTICATION: ${SMTP_AUTHENTICATION}
+      SMTP_ENABLE_STARTTLS_AUTO: "${SMTP_ENABLE_STARTTLS_AUTO}"
+      SMTP_USER_NAME: "${SMTP_USER_NAME}"
+      SMTP_PASSWORD: "${SMTP_PASSWORD}"
+      TZ: "Asia/Seoul"
+      PASSENGER_START_TIMEOUT: ${PASSENGER_START_TIMEOUT}
+    restart: always
+
+  jenkins:
+    image: jenkins/jenkins:latest
+    logging:
+      driver: "${LOG_DRIVER}"
+      options:
+        max-file: "${LOG_OPT_MAXF}"
+        max-size: "${LOG_OPT_MAXS}"
+    container_name: jenkins
+    privileged: true
+    volumes:
+      - ./jenkins_home:/var/jenkins_home
+    expose:
+      - 8080
+    environment:
+      TZ: "Asia/Seoul"
+    restart: always
+
+  gitolite:
+    build: ../../docker/gitolite
+    logging:
+      driver: "${LOG_DRIVER}"
+      options:
+        max-file: "${LOG_OPT_MAXF}"
+        max-size: "${LOG_OPT_MAXS}"
+    working_dir: /application
+    container_name: gitolite
+    volumes:
+      - ./storage:/home/gitolite-creator/repositories
+    ports:
+      - 2222:22
+    environment:
+      TZ: "Asia/Seoul"
+    restart: always
