--- a/compose/web_service/nginx_uvicorn/docker-compose.yml
+++ b/compose/web_service/nginx_uvicorn/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - ../../../config/web-server/nginx/gunicorn/proxy_params/proxy_params:/etc/nginx/proxy_params
       - ./ssl/certs/:/etc/ssl/certs/
       - ./ssl/letsencrypt/:/etc/letsencrypt/
-      - ../../../log:/log
+      - ../../../log/:/log/
+      - ../../../script/logrotate/nginx/nginx:/etc/logrotate.d/nginx
     ports:
       - 80:80
       - 443:443
@@ -37,7 +38,8 @@ services:
       - ../../../www:/www
       - ../../../log:/log
       - ../../../config/app-server/uvicorn/:/uvicorn
-    command: bash -c "poetry config virtualenvs.create false && poetry install --no-root --without test && gunicorn -c /uvicorn/gunicorn.conf.py"
+      - ../../../script/logrotate/uvicorn/uvicorn:/etc/logrotate.d/uvicorn
+    command: bash -c "poetry config virtualenvs.create false && poetry install --no-root --without test && gunicorn -c /uvicorn/gunicorn_uvicorn.conf.py"
     environment:
       TZ: "Asia/Seoul"
     restart: always
@@ -54,6 +56,7 @@ services:
     volumes:
       - ../../../www:/www
       - ../../../log:/log
+      - ../../../script/logrotate/uvicorn/celery/uvicorn-celery:/etc/logrotate.d/uvicorn-celery
     command: bash -c "poetry config virtualenvs.create false && \
       poetry install --no-root && \
       celery -A config worker \
@@ -64,7 +67,7 @@ services:
     restart: always
     depends_on:
       - redis
-      - uvicorn-app
+      - gunicorn-uvicorn-app
     profiles:
       - celery
 
@@ -80,6 +83,7 @@ services:
     volumes:
       - ../../../www:/www
       - ../../../log:/log
+      - ../../../script/logrotate/uvicorn/celerybeat/uvicorn-celerybeat:/etc/logrotate.d/uvicorn-celerybeat
     command: bash -c "poetry config virtualenvs.create false && \
       poetry install --no-root && \
       celery -A config beat \
